# commit_msg_trailers

./: .pre-commit-hooks.yaml  README.md  add-msg-issue-trailer.py  setup.cfg
commit_msg_trailers/: commit_msg_trailers.py
