[metadata]
name = trailer_jira_id

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    trailer-jira-id = trailer_jira_id.trailer_jira_id:main

[bdist_wheel]
universal = True
