[metadata]
name = commit_msg_trailers
long_description = file: README.md
long_description_content_type = text/markdown

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    commit-msg-trailers = commit_msg_trailers.commit_msg_trailers:main

[bdist_wheel]
universal = True
